# PAL_rs

./: Cargo.toml  README.md  pal_rs
assets/traces/: very_large_trace.txt
scripts/: all_for_all  analysis  rnd.py  wrapper
src/: lib.rs  main.rs
src/cli/: analysis.rs  mod.rs  translate.rs
src/memory/: primary.rs
src/mmu/: address.rs  mod.rs  page_table.rs  trace.rs
src/pal/: counter.rs  lru.rs  mod.rs  second_chance.rs
