[package]
name = "pal_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.69"
rand = "0.8.5"
once_cell = "1.17.1"
chrono = "0.4.24"
singleton-manager = "0.1.4"
